[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndict-tools"
version = "1.2.0rc1"
authors = [
    {name="biface"}
]
description = "An implementation of nested dictionaries"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "basedpyright",
    "black",
    "build",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "tox",
    "tox-uv",
    "twine",
    "wheel",
]
docs = [
    "sphinx==8.1.3",
    "furo==2025.12.19",
    "sphinx-multiversion-contrib==0.2.13",
    "myst-parser==4.0.1",
]

[project.urls]
Homepage = "https://github.com/biface/ndt"
Documentation = "https://ndict-tools.readthedocs.io/en/latest/"
Repository = "https://github.com/biface/ndt.git"
Issues = "https://github.com/biface/ndt/issues"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "ndict_tools"
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
ignore = ["E501"]
extend-ignore = ["E203", "W503"]
exclude = [".tox", ".git", "__pycache__", "build", "dist"]
